<resources>
    <string name="app_name">BBTester</string>
    <string name="enter_name">Test Name</string>
    <string name="add_record">Add Record</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_connect">Connect</string>
    <string name="empty_list_text">No records found</string>
    <string name="enter_desc">BB Test for </string>
    <string name="enter_label">Label</string>


    <string name="enter_testtype">BB Test Type 0=mobile</string>
    <string name="enter_clid">Client ID</string>
    <string name="enter_clsec">Client Secret</string>
    <string name="enter_reduri">Redirect URI</string>
    <string name="enter_authuri">Authorization URI</string>
    <string name="enter_tokuri">Token URI</string>
    <string name="enter_authscope">Authorization Scope</string>
    <string name="enter_discuri">Discovery URI</string>
    <string name="enter_regenduri">Registration Endpoint URI</string>
    <string name="enter_usrinfouri">User Info URI</string>
    <string name="enter_httpsreq">HTTPS Required true/false</string>

    <string name="app_name_short">BB-OAuth-Tester</string>
    <string name="auth_granted">Authorization granted</string>
    <string name="intro_header">Bluebutton AppAuth Test</string>
    <string name="openid_logo_content_description">AppAuth Logo</string>
    <string name="refresh_token">Refresh token</string>
    <string name="access_token_expires_at">Access token expires at: %s</string>
    <string name="no_access_token_returned">No access token returned</string>
    <string name="no_refresh_token_returned">No refresh token returned</string>
    <string name="refresh_token_returned">Refresh token returned</string>
    <string name="no_id_token_returned">No ID token returned</string>
    <string name="id_token_returned">ID token returned</string>
    <string name="view_profile">View user info</string>
    <string name="userinfo_profile_content_description">User profile picture</string>
    <string name="login_hint_value">Account ID (e.g. test@example.com)</string>
    <string name="account_id_description">The Account ID is optional. If specified, it is transmitted as a login_hint parameter in the authorization request.</string>
    <string name="auth_options">Authorization options:</string>
    <string name="browser_selector_label">Use browser:</string>
    <string name="browser_icon_contentDescription">Browser app icon</string>
    <string name="browser_appauth_default_label">AppAuth heuristic selection</string>
    <string name="custom_tab_label">"%1$s (custom tab)"</string>
    <string name="retry_label">Retry</string>
    <string name="not_authorized">Not authorized</string>
    <string name="start_authorization">Start authorization</string>
    <string name="reauthorize">Reauthorize</string>
    <string name="sign_out">Sign out</string>
    <string name="no_access_token_expiry">Access time has no defined expiry</string>
    <string name="access_token_expired">Access token has expired</string>
    <string name="auth_settings">Authorization settings in use:</string>
    <string name="use_pending_intents">Use PendingIntent\'s for completion</string>
</resources>
